--- a/css/style.css
+++ b/css/style.css
@@ -119,9 +119,16 @@ a { cursor: pointer }
 .result .expand {
   padding: 0.2em;
   zoom: 0.5;
+  -moz-transform: scale(0.65);
   position: absolute;
   top: 0;
   left: 0;
+}
+@-moz-document url-prefix() {
+    .result .expand {
+        left: -0.25em;
+        top: -.4em;
+    }
 }
 .filterable {
   cursor: pointer;
@@ -150,3 +157,184 @@ partlist:after {
   text-shadow:0 0 10px yellow;
 }
 */
+
+#waiter {
+  margin-left: 40%;
+  text-align: center;
+  display: none;
+}
+
+#fadingBarsG{
+position:relative;
+width:166px;
+height:20px}
+
+.fadingBarsG{
+position:absolute;
+top:0;
+background-color:#555555;
+width:20px;
+height:20px;
+-moz-animation-name:bounce_fadingBarsG;
+-moz-animation-duration:1.6s;
+-moz-animation-iteration-count:infinite;
+-moz-animation-direction:linear;
+-moz-transform:scale(.3);
+-webkit-animation-name:bounce_fadingBarsG;
+-webkit-animation-duration:1.6s;
+-webkit-animation-iteration-count:infinite;
+-webkit-animation-direction:linear;
+-webkit-transform:scale(.3);
+-ms-animation-name:bounce_fadingBarsG;
+-ms-animation-duration:1.6s;
+-ms-animation-iteration-count:infinite;
+-ms-animation-direction:linear;
+-ms-transform:scale(.3);
+-o-animation-name:bounce_fadingBarsG;
+-o-animation-duration:1.6s;
+-o-animation-iteration-count:infinite;
+-o-animation-direction:linear;
+-o-transform:scale(.3);
+animation-name:bounce_fadingBarsG;
+animation-duration:1.6s;
+animation-iteration-count:infinite;
+animation-direction:linear;
+transform:scale(.3);
+}
+
+#fadingBarsG_1{
+left:0;
+-moz-animation-delay:0.64s;
+-webkit-animation-delay:0.64s;
+-ms-animation-delay:0.64s;
+-o-animation-delay:0.64s;
+animation-delay:0.64s;
+}
+
+#fadingBarsG_2{
+left:21px;
+-moz-animation-delay:0.8s;
+-webkit-animation-delay:0.8s;
+-ms-animation-delay:0.8s;
+-o-animation-delay:0.8s;
+animation-delay:0.8s;
+}
+
+#fadingBarsG_3{
+left:42px;
+-moz-animation-delay:0.96s;
+-webkit-animation-delay:0.96s;
+-ms-animation-delay:0.96s;
+-o-animation-delay:0.96s;
+animation-delay:0.96s;
+}
+
+#fadingBarsG_4{
+left:62px;
+-moz-animation-delay:1.12s;
+-webkit-animation-delay:1.12s;
+-ms-animation-delay:1.12s;
+-o-animation-delay:1.12s;
+animation-delay:1.12s;
+}
+
+#fadingBarsG_5{
+left:83px;
+-moz-animation-delay:1.28s;
+-webkit-animation-delay:1.28s;
+-ms-animation-delay:1.28s;
+-o-animation-delay:1.28s;
+animation-delay:1.28s;
+}
+
+#fadingBarsG_6{
+left:104px;
+-moz-animation-delay:1.44s;
+-webkit-animation-delay:1.44s;
+-ms-animation-delay:1.44s;
+-o-animation-delay:1.44s;
+animation-delay:1.44s;
+}
+
+#fadingBarsG_7{
+left:125px;
+-moz-animation-delay:1.6s;
+-webkit-animation-delay:1.6s;
+-ms-animation-delay:1.6s;
+-o-animation-delay:1.6s;
+animation-delay:1.6s;
+}
+
+#fadingBarsG_8{
+left:145px;
+-moz-animation-delay:1.76s;
+-webkit-animation-delay:1.76s;
+-ms-animation-delay:1.76s;
+-o-animation-delay:1.76s;
+animation-delay:1.76s;
+}
+
+@-moz-keyframes bounce_fadingBarsG{
+0%{
+-moz-transform:scale(1);
+background-color:#555555;
+}
+
+100%{
+-moz-transform:scale(.3);
+background-color:#999999;
+}
+
+}
+
+@-webkit-keyframes bounce_fadingBarsG{
+0%{
+-webkit-transform:scale(1);
+background-color:#555555;
+}
+
+100%{
+-webkit-transform:scale(.3);
+background-color:#999999;
+}
+
+}
+
+@-ms-keyframes bounce_fadingBarsG{
+0%{
+-ms-transform:scale(1);
+background-color:#555555;
+}
+
+100%{
+-ms-transform:scale(.3);
+background-color:#999999;
+}
+
+}
+
+@-o-keyframes bounce_fadingBarsG{
+0%{
+-o-transform:scale(1);
+background-color:#555555;
+}
+
+100%{
+-o-transform:scale(.3);
+background-color:#999999;
+}
+
+}
+
+@keyframes bounce_fadingBarsG{
+0%{
+transform:scale(1);
+background-color:#555555;
+}
+
+100%{
+transform:scale(.3);
+background-color:#999999;
+}
+
+}
