--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
  padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
  color: #000;
+ display: none;
 }
 #copy{
  text-align:center;
