--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,31 @@ body {
  color: #000;
  display: none;
 }
-#copy{
- text-align:center;
- padding-top: 900px;
+
+form {
+  margin: 0
 }
-small { display: block;
+
+small { 
+  display: block;
   font-weight:normal;
   white-space:nowrap;
   text-indent: 0.15em;
   color: #888;
   font-family: monospace;
-
 }
+
 a { cursor: pointer }
+
+#dp3 {
+  margin: 5px 5px 0 0;
+}
+  
+#copy{
+  text-align:center;
+  padding-top: 900px;
+}
+
 .members span {
   background:#434;
   color:#ede;  
@@ -182,59 +194,60 @@ partlist:after {
 }
 
 #fadingBarsG{
-position:relative;
-width:166px;
-height:20px}
+  position:relative;
+  width:166px;
+  height:20px
+}
 
 .fadingBarsG{
-position:absolute;
-top:0;
-background-color:#555555;
-width:20px;
-height:20px;
--moz-animation-name:bounce_fadingBarsG;
--moz-animation-duration:1.6s;
--moz-animation-iteration-count:infinite;
--moz-animation-direction:linear;
--moz-transform:scale(.3);
--webkit-animation-name:bounce_fadingBarsG;
--webkit-animation-duration:1.6s;
--webkit-animation-iteration-count:infinite;
--webkit-animation-direction:linear;
--webkit-transform:scale(.3);
--ms-animation-name:bounce_fadingBarsG;
--ms-animation-duration:1.6s;
--ms-animation-iteration-count:infinite;
--ms-animation-direction:linear;
--ms-transform:scale(.3);
--o-animation-name:bounce_fadingBarsG;
--o-animation-duration:1.6s;
--o-animation-iteration-count:infinite;
--o-animation-direction:linear;
--o-transform:scale(.3);
-animation-name:bounce_fadingBarsG;
-animation-duration:1.6s;
-animation-iteration-count:infinite;
-animation-direction:linear;
-transform:scale(.3);
+  position:absolute;
+  top:0;
+  background-color:#555555;
+  width:20px;
+  height:20px;
+  -moz-animation-name:bounce_fadingBarsG;
+  -moz-animation-duration:1.6s;
+  -moz-animation-iteration-count:infinite;
+  -moz-animation-direction:linear;
+  -moz-transform:scale(.3);
+  -webkit-animation-name:bounce_fadingBarsG;
+  -webkit-animation-duration:1.6s;
+  -webkit-animation-iteration-count:infinite;
+  -webkit-animation-direction:linear;
+  -webkit-transform:scale(.3);
+  -ms-animation-name:bounce_fadingBarsG;
+  -ms-animation-duration:1.6s;
+  -ms-animation-iteration-count:infinite;
+  -ms-animation-direction:linear;
+  -ms-transform:scale(.3);
+  -o-animation-name:bounce_fadingBarsG;
+  -o-animation-duration:1.6s;
+  -o-animation-iteration-count:infinite;
+  -o-animation-direction:linear;
+  -o-transform:scale(.3);
+  animation-name:bounce_fadingBarsG;
+  animation-duration:1.6s;
+  animation-iteration-count:infinite;
+  animation-direction:linear;
+  transform:scale(.3);
 }
 
 #fadingBarsG_1{
-left:0;
--moz-animation-delay:0.64s;
--webkit-animation-delay:0.64s;
--ms-animation-delay:0.64s;
--o-animation-delay:0.64s;
-animation-delay:0.64s;
+  left:0;
+  -moz-animation-delay:0.64s;
+  -webkit-animation-delay:0.64s;
+  -ms-animation-delay:0.64s;
+  -o-animation-delay:0.64s;
+  animation-delay:0.64s;
 }
 
 #fadingBarsG_2{
-left:21px;
--moz-animation-delay:0.8s;
--webkit-animation-delay:0.8s;
--ms-animation-delay:0.8s;
--o-animation-delay:0.8s;
-animation-delay:0.8s;
+  left:21px;
+  -moz-animation-delay:0.8s;
+  -webkit-animation-delay:0.8s;
+  -ms-animation-delay:0.8s;
+  -o-animation-delay:0.8s;
+  animation-delay:0.8s;
 }
 
 #fadingBarsG_3{
