--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ a { cursor: pointer }
   padding:0.3em 0.5em;
   margin:0.25em;
   vertical-align: middle;
+  overflow: hidden;
 }
 .result .timestamp {
   display: block;
