--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ a { cursor: pointer ; color: darkblue;}
 /* Putting a transparent colon after the name will make it so that a copy/paste of the content
  * will reveal a colon after the name, but in the browser it will stay invisible
  */
-.author .colon { color: transparent }
+.author .colon { color: transparent; height: 1px; display: block}
 
 /* This is similar to the previous trick, but for multi-line chat messages.  We put in some spacing and elipses prior to
  * each line, but then hide their display in a way that a copy/paste will still pick it up, but the human eye will not
