--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ a { cursor: pointer }
   font-size: 0.8em;
   padding-left: 1.25em;
 }
+.author a { color: darkblue; }
 .expanded .timestamp {
   display: none;
 }
