--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ a { cursor: pointer ; color: darkblue;}
  */
 .author .colon { color: transparent }
 
-pre.tab{display:inline-block;background:none;width:0;border:0;margin:0;padding:0}
+pre.tab{display:inline-block;background:none;width:2px;border:0;margin:0 0 0 -2px;padding:0;height:3px;font-size:0px}
 .author a { color: darkblue; }
 .expanded .timestamp {
   display: none;
